--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "myfirstreact",
   "version": "0.1.0",
   "private": true,
+  "main": "server.js",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -9,6 +10,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "express": "^4.17.1",
     "fontsource-roboto": "^3.0.3",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
